compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__bit_arrays__discard_utf8_pattern.snap
---
source: compiler-core/src/erlang/tests/bit_arrays.rs
expression: "\npub fn main() {\n    let assert <<_:utf8, rest:bits>> = <<>>\n}"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("/root/project/test/my/mod.rakun", 2).
-spec main() -> bitstring().
main() ->
    _assert_subject = <<>>,
    <<_/utf8, Rest/bitstring>> = case _assert_subject of
        <<_/utf8, _/bitstring>> -> _assert_subject;
        _assert_fail ->
            erlang:error(#{rakun_error => let_assert,
                        message => <<"Pattern match failed, no pattern matched the value."/utf8>>,
                        value => _assert_fail,
                        module => <<"my/mod"/utf8>>,
                        function => <<"main"/utf8>>,
                        line => 3})
    end.
