compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__bit_arrays__unicode_bit_array_1.snap
---
source: compiler-core/src/erlang/tests/bit_arrays.rs
expression: "\n    pub fn main() {\n        let emoji = \"\\u{1F600}\"\n        let arr = <<emoji:utf8>>\n}"
---
----- SOURCE CODE

    pub fn main() {
        let emoji = "\u{1F600}"
        let arr = <<emoji:utf8>>
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("/root/project/test/my/mod.rakun", 2).
-spec main() -> bitstring().
main() ->
    Emoji = <<"\x{1F600}"/utf8>>,
    Arr = <<Emoji/binary>>.
